// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate Client Code: client code 1`] = `
"import _test_assets_pages_index_vue from '/test/assets/pages/index.vue'

const routes = [
  {
    \\"name\\": \\"all\\",
    \\"path\\": \\"/:all(.*)\\",
    \\"component\\": () => import('/test/assets/pages/[...all].vue'),
    \\"props\\": true
  },
  {
    \\"path\\": \\"/about\\",
    \\"component\\": () => import('/test/assets/pages/about.vue'),
    \\"children\\": [
      {
        \\"name\\": \\"about\\",
        \\"path\\": \\"\\",
        \\"component\\": () => import('/test/assets/pages/about/index.vue'),
        \\"props\\": (route2) => ({query: route2.query.q})
      }
    ],
    \\"props\\": true
  },
  {
    \\"name\\": \\"components\\",
    \\"path\\": \\"/components\\",
    \\"component\\": () => import('/test/assets/pages/components.vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"name-override\\",
    \\"path\\": \\"/\\",
    \\"component\\": _test_assets_pages_index_vue,
    \\"props\\": true,
    \\"meta\\": {
      \\"requiresAuth\\": false
    }
  },
  {
    \\"name\\": \\"sensor-current\\",
    \\"path\\": \\"/:sensor/current\\",
    \\"component\\": () => import('/test/assets/pages/[sensor]/current.vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"name-override\\",
    \\"path\\": \\"/blog/:id\\",
    \\"component\\": () => import('/test/assets/pages/blog/[id].vue'),
    \\"props\\": true,
    \\"meta\\": {
      \\"requiresAuth\\": false
    }
  },
  {
    \\"name\\": \\"blog\\",
    \\"path\\": \\"/blog\\",
    \\"component\\": () => import('/test/assets/pages/blog/index.vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"blog-today\\",
    \\"path\\": \\"/blog/today\\",
    \\"component\\": () => import('/test/assets/pages/blog/today/index.vue'),
    \\"props\\": true
  },
  {
    \\"name\\": \\"userId\\",
    \\"path\\": \\"/:userId\\",
    \\"component\\": () => import('/test/assets/pages/[userId].tsx'),
    \\"props\\": true
  }
]

export default routes"
`;

exports[`Generate Nuxt Style Routes: nuxt style routes 1`] = `
Array [
  Object {
    "component": "/test/assets/nuxt-pages/_.vue",
    "name": "all",
    "path": "/:all(.*)",
    "props": true,
  },
  Object {
    "children": Array [
      Object {
        "component": "/test/assets/nuxt-pages/about/index.vue",
        "name": "about",
        "path": "",
        "props": true,
      },
    ],
    "component": "/test/assets/nuxt-pages/about.vue",
    "path": "/about",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/components.vue",
    "name": "components",
    "path": "/components",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/index.vue",
    "meta": Object {
      "requiresAuth": false,
    },
    "name": "name-override",
    "path": "/",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/_sensor/current.vue",
    "name": "sensor-current",
    "path": "/:sensor/current",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/blog/_id.vue",
    "name": "blog-id",
    "path": "/blog/:id",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/blog/index.vue",
    "name": "blog",
    "path": "/blog",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/blog/today/index.vue",
    "name": "blog-today",
    "path": "/blog/today",
    "props": true,
  },
  Object {
    "component": "/test/assets/nuxt-pages/[userId].tsx",
    "name": "[userId].tsx",
    "path": "/[userId].tsx",
    "props": true,
  },
]
`;

exports[`Generate Routes: routes 1`] = `
Array [
  Object {
    "component": "/test/assets/pages/[...all].vue",
    "name": "all",
    "path": "/:all(.*)",
    "props": true,
  },
  Object {
    "children": Array [
      Object {
        "component": "/test/assets/pages/about/index.vue",
        "name": "about",
        "path": "",
        "props": [Function],
      },
    ],
    "component": "/test/assets/pages/about.vue",
    "path": "/about",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/components.vue",
    "name": "components",
    "path": "/components",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/index.vue",
    "meta": Object {
      "requiresAuth": false,
    },
    "name": "name-override",
    "path": "/",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/[sensor]/current.vue",
    "name": "sensor-current",
    "path": "/:sensor/current",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/blog/[id].vue",
    "meta": Object {
      "requiresAuth": false,
    },
    "name": "name-override",
    "path": "/blog/:id",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/blog/index.vue",
    "name": "blog",
    "path": "/blog",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/blog/today/index.vue",
    "name": "blog-today",
    "path": "/blog/today",
    "props": true,
  },
  Object {
    "component": "/test/assets/pages/[userId].tsx",
    "name": "userId",
    "path": "/:userId",
    "props": true,
  },
]
`;
